--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.11.3",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.5",
     "@libsql/client": "^0.6.0",
     "@nextui-org/react": "^2.3.6",
